--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,11 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: var(--bg-primary);
+            background:
+                radial-gradient(1200px 800px at 15% 15%, rgba(224,68,109,0.20), transparent 55%),
+                radial-gradient(900px 700px at 85% 25%, rgba(79,70,229,0.18), transparent 60%),
+                radial-gradient(1000px 700px at 60% 85%, rgba(34,197,94,0.12), transparent 60%),
+                linear-gradient(180deg, var(--bg-primary), var(--bg-primary));
             color: var(--text-primary);
             min-height: 100vh;
             transition: background 0.3s ease, color 0.3s ease;
@@ -44,16 +48,95 @@
             overflow-x: hidden;
         }
 
+        body::before {
+            content: '';
+            position: fixed;
+            inset: 0;
+            pointer-events: none;
+            z-index: -3;
+            background:
+                radial-gradient(900px 600px at 30% 40%, rgba(14,165,233,0.10), transparent 60%),
+                radial-gradient(1100px 700px at 70% 60%, rgba(168,85,247,0.10), transparent 60%),
+                repeating-linear-gradient(90deg, rgba(255,255,255,0.05) 0, rgba(255,255,255,0.05) 1px, transparent 1px, transparent 120px),
+                repeating-linear-gradient(0deg, rgba(255,255,255,0.04) 0, rgba(255,255,255,0.04) 1px, transparent 1px, transparent 120px);
+            mix-blend-mode: overlay;
+            opacity: 0.55;
+        }
+
+        [data-theme="dark"] body::before {
+            background:
+                radial-gradient(900px 600px at 30% 40%, rgba(14,165,233,0.12), transparent 60%),
+                radial-gradient(1100px 700px at 70% 60%, rgba(168,85,247,0.12), transparent 60%),
+                repeating-linear-gradient(90deg, rgba(255,255,255,0.06) 0, rgba(255,255,255,0.06) 1px, transparent 1px, transparent 120px),
+                repeating-linear-gradient(0deg, rgba(255,255,255,0.05) 0, rgba(255,255,255,0.05) 1px, transparent 1px, transparent 120px);
+            opacity: 0.35;
+        }
+
         /* ── Layout ─────────────────────────────────── */
         .timeline {
-            width: 100%;
-            margin: 0;
-            background: var(--bg-secondary);
+            width: min(1100px, calc(100% - 48px));
+            margin: 18px auto;
+            background: rgba(255, 255, 255, 0.62);
             min-height: 100vh;
-            border-left: none;
-            border-right: none;
+            border: 1px solid rgba(255, 255, 255, 0.35);
+            border-radius: 22px;
             position: relative;
             overflow: hidden;
+            box-shadow:
+                0 20px 70px rgba(0,0,0,0.18),
+                0 0 0 1px rgba(255,255,255,0.06) inset;
+            backdrop-filter: blur(22px) saturate(140%);
+            -webkit-backdrop-filter: blur(22px) saturate(140%);
+        }
+
+        .timeline::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            pointer-events: none;
+            background:
+                radial-gradient(900px 500px at 10% 0%, rgba(255,255,255,0.55), transparent 55%),
+                radial-gradient(700px 500px at 100% 20%, rgba(255,255,255,0.25), transparent 55%),
+                linear-gradient(180deg, rgba(255,255,255,0.20), rgba(255,255,255,0.02));
+            opacity: 0.9;
+        }
+
+        .timeline::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            pointer-events: none;
+            background: linear-gradient(135deg, rgba(224,68,109,0.10), rgba(79,70,229,0.08), rgba(34,197,94,0.06));
+            mix-blend-mode: overlay;
+            opacity: 0.35;
+        }
+
+        [data-theme="dark"] .timeline {
+            background: rgba(22, 24, 28, 0.62);
+            border: 1px solid rgba(255, 255, 255, 0.10);
+            box-shadow:
+                0 24px 90px rgba(0,0,0,0.55),
+                0 0 0 1px rgba(255,255,255,0.05) inset;
+        }
+
+        [data-theme="dark"] .timeline::before {
+            background:
+                radial-gradient(900px 500px at 10% 0%, rgba(255,255,255,0.18), transparent 55%),
+                radial-gradient(700px 500px at 100% 20%, rgba(255,255,255,0.10), transparent 55%),
+                linear-gradient(180deg, rgba(255,255,255,0.10), rgba(255,255,255,0.01));
+            opacity: 0.8;
+        }
+
+        [data-theme="dark"] .timeline::after {
+            opacity: 0.28;
+        }
+
+        @media (max-width: 700px) {
+            .timeline {
+                width: calc(100% - 20px);
+                margin: 10px auto;
+                border-radius: 16px;
+            }
         }
 
         /* Animated Background */
@@ -63,15 +146,17 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: -1;
+            z-index: -2;
             pointer-events: none;
         }
 
         .bg-shape {
             position: absolute;
             border-radius: 50%;
-            background: linear-gradient(45deg, rgba(224,68,109,0.1), rgba(255,107,157,0.1));
+            background: linear-gradient(45deg, rgba(224,68,109,0.28), rgba(255,107,157,0.20));
             animation: float 20s ease-in-out infinite;
+            filter: blur(6px);
+            mix-blend-mode: screen;
         }
 
         .bg-shape:nth-child(1) {
